...
                android:text="Shopping List" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Conversion" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/navBarSearch"
            android:layout_width="match_parent"
...
