...

            <Button
                android:id="@+id/dietButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/dietLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/balanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/highFiber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/freeFromButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/freeFromLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/alcohol_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/diary_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/gluten_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/cuisineTypeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/cuisineTypeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/caloriesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/caloriesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <SeekBar
                    android:id="@+id/caloriesMinSeek"
                    android:layout_below="@id/caloriesMinTitle"
                    android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/caloriesMinTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/numOfResultsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <RelativeLayout
            android:id="@+id/resultsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/submitIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearAll"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0"
...
