<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RecipeByFilter"
    android:background="#e8fdff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent">

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="0px"
            android:layout_height="0px"
            android:hint="Meal Base"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.023"
            app:layout_constraintWidth_percent="0.50" />

        <ImageButton
            android:id="@+id/sendSearch"
            android:layout_width="0px"
            android:layout_height="0px"
            android:background="@color/Buttons"
            android:src="@android:drawable/ic_menu_search"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toEndOf="@+id/textInputEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:layout_constraintWidth_percent="0.15" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="153dp"
            android:layout_height="46dp"
            android:layout_marginTop="15dp"
            android:background="@color/Buttons"
            android:drawableRight="@drawable/filterlist"
            android:text="Filter"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorLink="#08E3E8"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/expand" />

        <FrameLayout
            android:id="@+id/filterFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.85"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>